--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,11 @@ body {
   padding: 0;
 }
 
+.navbar img {
+  width: 300px;
+  height: 60px;
+}
+
 .navbar ul {
   margin: 0;
   padding: 0;
@@ -58,6 +63,13 @@ body {
   color: var(--softColor);
   background-color: #75757a;
   border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+  .navbar img {
+    width: 200px;
+    height: 50px;
+  }
 }
 .btnStyle {
   background: #b10475 !important;
