--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,6 @@
   --hoverColor: #75757a;
   --softColor: #f1fbff;
   --WhiteColor: #ffff;
-  --textColor: #2b02c1;
 }
 * {
   font-family: "Times New Roman", sans-serif;
@@ -112,6 +111,7 @@ body {
   padding: 15px 40px;
   border-radius: 4px;
   transition: 0.5s;
+  width: 170px;
   color: var(--lightColor);
   background: var(--softColor);
 }
@@ -122,14 +122,15 @@ body {
   letter-spacing: 2px;
 }
 
-.mainPage .uper .btn-get-started i {
-  margin-left: 5px;
-  font-size: 18px;
-  transition: 0.3s;
-}
-
-.mainPage .uper .btn-get-started:hover i {
-  transform: translateX(5px);
+.mainPage .uper .btn-register {
+  margin-top: 30px;
+  line-height: 0;
+  padding: 15px 40px;
+  border-radius: 4px;
+  transition: 0.5s;
+  width: 170px;
+  color: var(--WhiteColor);
+  background: #b10475;
 }
 
 .mainPage .uper img {
@@ -180,6 +181,35 @@ body {
   .mainPage .uper h2 {
     font-size: 18px;
   }
+}
+
+/*Home About*/
+
+.homeAbout .section-title h2{
+  margin-top: 20px;
+  color: rgb(29, 72, 174);
+}
+.homeAbout .row .text{
+  color: var(--testColor);
+}
+
+.homeAbout .row .round{
+  background: var(--WhiteColor);
+  color: var(--testColor);
+  height: 20px;
+  width: 20px;
+  font-size: 12px;
+  border-radius: 50%;
+  padding: 1px;
+}
+.homeAbout .row .round-2{
+  color: var(--WhiteColor);
+  width: 100px;
+  font-size: 18px;
+  border-radius: 50%;
+}
+.homeAbout .row  p{
+  color: var(--WhiteColor);
 }
 /*--------------------------------------------------------------
 # Main  About
@@ -245,7 +275,7 @@ body {
   # Siwes card List
   --------------------------------------------------------------*/
 .cardList {
-  background: linear-gradient(var(--softColor), var(--testColor));
+  background: var(--softColor);
 }
 .cardList .section-title h2 {
   padding-top: 20px;
@@ -259,7 +289,7 @@ body {
 
 .cardList .row .stateBody {
   overflow: hidden;
-  background: linear-gradient(var(--testColor), var(--softColor));
+  background: var(--testColor);
   border-top-left-radius: 20px;
   border-bottom-right-radius: 20px;
   height: 10vh;
