--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,14 +111,14 @@ body {
   padding: 15px 40px;
   border-radius: 4px;
   transition: 0.5s;
-  width: 170px;
+  width: 40%;
   color: var(--lightColor);
   background: var(--softColor);
 }
 
 .mainPage .uper .btn-get-started span {
-  font-weight: 600;
-  font-size: 20px;
+  font-weight: 500;
+  font-size: 17px;
   letter-spacing: 2px;
 }
 
@@ -128,9 +128,14 @@ body {
   padding: 15px 40px;
   border-radius: 4px;
   transition: 0.5s;
-  width: 170px;
+  width: 40%;
   color: var(--WhiteColor);
   background: #b10475;
+}
+.mainPage .uper .btn-register span {
+  font-weight: 500;
+  font-size: 17px;
+  letter-spacing: 2px;
 }
 
 .mainPage .uper img {
@@ -181,19 +186,32 @@ body {
   .mainPage .uper h2 {
     font-size: 18px;
   }
+    .mainPage .uper .btn-get-started {
+    width: 100%;
+  }
+  .mainPage .uper .btn-register {
+    width: 100%;
+  }
+  .mainPage .uper .btn-get-started span {
+    font-size: 16px;
+    letter-spacing: 2px;
+  }
+  .mainPage .uper .btn-register span {
+    font-size: 16px;
+  }
 }
 
 /*Home About*/
 
-.homeAbout .section-title h2{
+.homeAbout .section-title h2 {
   margin-top: 20px;
   color: rgb(29, 72, 174);
 }
-.homeAbout .row .text{
+.homeAbout .row .text {
   color: var(--testColor);
 }
 
-.homeAbout .row .round{
+.homeAbout .row .round {
   background: var(--WhiteColor);
   color: var(--testColor);
   height: 20px;
@@ -202,13 +220,13 @@ body {
   border-radius: 50%;
   padding: 1px;
 }
-.homeAbout .row .round-2{
+.homeAbout .row .round-2 {
   color: var(--WhiteColor);
   width: 100px;
   font-size: 18px;
   border-radius: 50%;
 }
-.homeAbout .row  p{
+.homeAbout .row p {
   color: var(--WhiteColor);
 }
 /*--------------------------------------------------------------
