--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,16 @@
 
 :root {
   --testColor: #0b0c27;
+
   --hoverColor: #75757a;
-  --softColor: #f1fbff;
+  --softColor: #f2f2f2;
   --WhiteColor: #ffff;
+  --praColor: #023e8a;
+  --ppColor: #023e8a;
+  --gradientBg: #b7e1fda7;
 }
 * {
-  font-family: "Times New Roman", sans-serif;
+  font-family: "Lucida Sans", sans-serif;
 }
 
 body {
@@ -47,27 +51,32 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 0 10px 30px;
+  padding: 4px 0 8px 20px;
   font-size: 16px;
   font-weight: 600;
-  color: var(--textColor);
+  color: var(--praColor);
   white-space: nowrap;
   transition: 0.3s;
+  border-radius: 6px;
 }
 
 .navbar a:hover,
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover > a {
-  color: var(--softColor);
-  background-color: #75757a;
+  font-size: 15px;
   border-radius: 5px;
+  opacity: 0.7;
+  color: #2f2fe8;
 }
 
 @media (max-width: 768px) {
   .navbar img {
     width: 200px;
     height: 50px;
+  }
+  .navbar img:hover {
+    background-color: var(--WhiteColor);
   }
 }
 .btnStyle {
@@ -76,13 +85,21 @@ body {
   border-radius: 5px;
 }
 .btnStyle:hover {
-  background-color: var(--textColor) !important;
+  background-color: var(--praColor) !important;
+  color: var(--WhiteColor) !important;
+}
+@media (max-width: 768px) {
+  .navbar a,
+  .navbar a:focus {
+    padding: 15px;
+    margin: 5px;
+  }
 }
 /*--------------------------------------------------------------
 # MainPage Section
 --------------------------------------------------------------*/
 .mainPage {
-  background: linear-gradient(var(--softColor), var(--testColor)),
+  background: linear-gradient(var(--softColor), var(--ppColor)),
     url("/assets/slider.png");
   background-blend-mode: multiply;
   background-position: center;
@@ -115,6 +132,10 @@ body {
   color: var(--lightColor);
   background: var(--softColor);
 }
+.mainPage .uper .btn-get-started:hover {
+  font-size: 15px;
+  opacity: 0.7;
+}
 
 .mainPage .uper .btn-get-started span {
   font-weight: 500;
@@ -128,9 +149,20 @@ body {
   padding: 15px 40px;
   border-radius: 4px;
   transition: 0.5s;
+  width: 50%;
+  color: var(--WhiteColor);
+  background: #b10475;
+}
+.mainPage .uper .btn-register:hover {
+  margin-top: 30px;
+  line-height: 0;
+  padding: 15px 40px;
+  border-radius: 4px;
+  transition: 0.5s;
   width: 40%;
   color: var(--WhiteColor);
   background: #b10475;
+  opacity: 0.7;
 }
 .mainPage .uper .btn-register span {
   font-weight: 500;
@@ -156,6 +188,14 @@ body {
     height: 85%;
     width: 100%;
   }
+  .mainPage .uper .btn-get-started {
+    width: 43%;
+  }
+
+  .mainPage .uper .btn-register {
+    width: 50%;
+  }
+  
 }
 
 @media (max-width: 768px) {
@@ -186,7 +226,7 @@ body {
   .mainPage .uper h2 {
     font-size: 18px;
   }
-    .mainPage .uper .btn-get-started {
+  .mainPage .uper .btn-get-started {
     width: 100%;
   }
   .mainPage .uper .btn-register {
@@ -205,7 +245,7 @@ body {
 
 .homeAbout .section-title h2 {
   margin-top: 20px;
-  color: rgb(29, 72, 174);
+  color: var(--ppColor);
 }
 .homeAbout .row .text {
   color: var(--testColor);
@@ -219,7 +259,9 @@ body {
   font-size: 12px;
   border-radius: 50%;
   padding: 1px;
+  display: none;
 }
+
 .homeAbout .row .round-2 {
   color: var(--WhiteColor);
   width: 100px;
@@ -229,6 +271,7 @@ body {
 .homeAbout .row p {
   color: var(--WhiteColor);
 }
+
 /*--------------------------------------------------------------
 # Main  About
 --------------------------------------------------------------*/
@@ -330,4 +373,69 @@ body {
   .cardList .section-title p {
     font-size: 18px;
   }
+}
+
+.customer-support .logo {
+  width: 300px;
+  height: 60px;
+}
+.customer-support .profile {
+  width: 25px;
+  height: 25px;
+}
+
+@media (max-width: 768px) {
+  .customer-support .logo {
+    width: 200px;
+    height: 50px;
+  }
+}
+
+/* verify*/
+.verify .emailbox {
+  width: 50px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #0404a0;
+  margin-right: 10px;
+  padding: 4px;
+  text-align: center;
+  font-size: 18px;
+  color: #0404a0;
+  outline: none;
+}
+.backgro {
+  background-color: #0404a0 !important;
+  color: var(--WhiteColor) !important;
+}
+thead.backgro th {
+  background-color: #222 !important;
+  color: #fff !important;
+}
+.customer .customerh2 {
+  color: rgb(29, 72, 174);
+}
+.sidebarColor a {
+  font-size: 12px;
+  color: var(--praColor);
+}
+.titleColor {
+  color: var(--ppColor) !important;
+  font-weight: 700px;
+}
+.imgRound {
+  border-radius: 300px;
+}
+
+.stayBg {
+  background-color: var(--gradientBg);
+}
+.primaryColor {
+  background-color: var(--praColor);
+  color: var(--WhiteColor);
+}
+.primaryColor:hover {
+  background-color: var(--praColor);
+  color: var(--WhiteColor);
+  opacity: 0.8;
 }
